<resources>
    <string name="app_name">MallAddis</string>
    <string name="topmall">top malls</string>
    <string name="topsellers">top sellers</string>
    <string name="viewall">view all</string>
    <string name="hotels">Hotels</string>
    <string name="cafe_and_restauran">Cafe and Restaurant</string>
    <string name="category">categories</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register now and earn more.</string>
    <string name="register_btn">Register</string>
    <string name="enter_push_amount">Enter how much you need.</string>
    <string name="select_customer">Select what type of customer you are going to add.</string>
    <string name="add_customer">Add customer</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_phone">Customer phone</string>
    <string name="customer_location">Location..e.g megenagna</string>
    <string name="user_name">tin no</string>
    <string name="password">password</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="dont_have_account">Don\'t have a addismalls account?</string>
    <string name="signup">Sign Up</string>
    <string name="your_referral_code">enter customer code</string>
    <string name="send_push">Send</string>
    <string name="first_name">Your name</string>
    <string name="last_name">Father\'s name</string>
    <string name="check_more"><u>Check more</u></string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="phone_no">phone no</string>
    <string name="tell_us_about_your_mall">Now tell us about your mall</string>
    <string name="mall_name">your mall name</string>
    <string name="tin_no">Tin no of your mall</string>
    <string name="city">City</string>
    <string name="no_of_floors">No of floors</string>
    <string name="create_your_passowrd">Create your password</string>
    <string name="already_have_account">Already have a addismalls account?</string>
    <string name="login">Log In</string>
    <string name="next">Next</string>
    <string name="lease_space_info">Upload your lease space photo. if you have any.</string>
    <string name="re_password">Re-type your password</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="enter_your_last_name">Please enter your name</string>
    <string name="enter_your_phone">Please enter your name</string>
    <string name="enter_your_mall_name">Please enter your mall name</string>
    <string name="enter_your_tin_no">Please enter your mall tin no</string>
    <string name="enter_your_mall_city">Please where your mall is find</string>
    <string name="enter_your_mall_floors_no">Please enter your mall floors no</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="enter_your_retype_password">Your password is not equal to the first one</string>
    <string name="password_is_not_match">Your password is not match</string>
    <string name="success_message">Your account is submitted successfully.We will announce or call you once we verify your account.\nThank you for choosing us from addismalls groups</string>
    <string name="hell_user">Hello\,</string>
    <string name="see_more"><u>view more</u></string>
    <string name="upload">Upload</string>
    <string name="address"><u>Address</u></string>
    <string name="news"><u>News</u></string>
    <string name="event"><u>Events</u></string>
    <string name="upload_Undline"><u>Upload</u></string>
    <string name="post_demand">Post demand</string>
    <string name="add_specific_address"><u>add specific address</u></string>
    <string name="add_specifif_address"><u>Add Specific address</u></string>
    <string name="specific_name">Specific address name</string>
    <string name="not_mall_photo_uploaded">We checked that you didn\'t upload your mall\'s photo.Please upload your mall photo. This makes users can identify your mall easily</string>
    <string name="specific_address_not_addedd">And also you didn\'t add your mall\'s specific address.Like <u>Near bole medhaniyam or 22 mazoriya</u>. This makes your users can find your mall easily.</string>
    <string name="specific_address_not_addedd2">you didn\'t add your mall\'s specific address.Like <u>Near bole medhaniyam or 22 mazoriya</u>. Please add your mall\'s specific address name.This makes your users can find your mall easily.</string>
    <string name="profile_completion">You are completed your profile detail.now start adding your retailers in your mall.Just add their tin number and create one constant password for them.Then they will complete the rest</string>
    <string name="create_reatiler_password">Create retailers password</string>
    <string name="see_our_item"><u>See our items</u></string>
    <string name="add_new_users">add all</string>
    <string name="ser_first_name">First Name</string>
    <string name="company_name">Your company name</string>
    <string name="category_type">Select your company category type</string>
    <string name="add_profile">Send</string>
    <string name="floor_no">Floor number</string>
    <string name="office_no">Office number</string>
    <string name="new_retailers_tin_no">Retailers tin no</string>
    <string name="constant_password">add your constant password</string>
    <string name="add_retailers_info">add your retailers tin no below.You can add more retailers tin no using  [img src=ic_add_icon/]  button.</string>
    <string name="demand_info">Post your demand to your peer.</string>
    <string name="shipper_field">describe your demand</string>
    <string name="hint_quantity">quantity</string>
    <string name="delivery_time">Deliver time</string>
    <string name="supply_info">Post your supply</string>
    <string name="supply_des">describe your supply</string>
    <string name="hint_price">price</string>
    <string name="uploading">Add your demand product photo to make it more clear.</string>
    <string name="my_profile">My Profile</string>
    <string name="add_new_retailers">Add all retailers</string>
    <string name="show_retailers">Show retailers</string>
    <string name="lease_space">Lease space</string>
    <string name="new_and_events">News &amp; events</string>
    <string name="my_logo">My logo</string>
    <string name="my_photo">Add more photo</string>
    <string name="upload_text">Upload your company logo(photo)</string>
    <string name="vacany">Vacancy</string>
    <string name="add_daily_demand"><u>Add daily demand</u></string>
    <string name="manage_daily_demand"><u>Manage daily demand</u></string>
    <string name="on_mind">What is on your mind ?. do you want to</string>
    <string name="select_item">Select the item you want to order.</string>
    <string name="hint_demand">How much you want ?</string>
    <string name="send">Send</string>
    <string name="menu_confirmed">Your menu is submitted successfully</string>
    <string name="select_image">Select your menu image or photo.</string>
    <string name="ambience_info">include your restaurant\'s main characters and atmosphere.</string>
    <string name="add_dishes"><u>Post new dishes</u></string>
    <string name="manage_dishes"><u>Manage dishes</u></string>
    <string name="select_dish">Select your dishe image.</string>
    <string name="back"><u>Back to main</u></string>
    <string name="new_dish"><u>upload new dish</u></string>
    <string name="hint_dish_name">dish name</string>
    <string name="hint_dish_price">dish price</string>
    <string name="describe_dish">Describe your dish more......</string>
    <string name="post_dish">post dishes</string>
    <string name="delivered">Delivered</string>
    <string name="address_shower"><u>Address</u></string>
    <string name="logout">Logout</string>
    <string name="select_posted_items">Upload(select) your product image</string>
    <string name="hint_price_name">Enter price</string>
    <string name="caption">Enter caption for this product.....</string>
    <string name="send_post">Post my product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_service_providers_nav">ServiceProvidersNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_service_provider_navigation">ServiceProviderNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="title_activity_system_admin">SystemAdminActivity</string>
    <string name="list_request_for_mall_registration">The following mall registration request are send to you.Start making research on these request and allow for them</string>
    <string name="title_activity_service_providers_dash_board">ServiceProvidersDashBoard</string>
    <string name="title_activity_suppliers_drawer">SuppliersDrawer</string>
    <string name="title_activity_view_all_top_mall">ViewAllTopMall</string>
    <string name="title_activity_vacancy">VacancyActivity</string>
    <string name="title_activity_push">Push</string>
    <string name="title_activity_hotels">Hotels</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_hotel_outer">HotelOuter</string>
    <string name="title_activity_company_agent">CompanyAgent</string>
    <string name="title_activity_job_agents">JobAgents</string>
    <string name="title_activity_view_all_hotels">ViewAllHotels</string>
    <string name="title_activity_view_all_cafe_and_res">ViewAllCafeAndRes</string>
    <string name="title_activity_rooms_details">RoomsDetails</string>
    <string name="title_activity_cafe_and_restaurant">CafeAndRestaurantActivity</string>
    <string name="title_activity_outer_vacancy">OuterVacancy</string>
    <string name="title_activity_outer_lease_space">OuterLeaseSpace</string>
    <string name="subscribe_info">Subscribe and get new item and products from us</string>
    <string name="select_your_customer_bank">Select your customer bank</string>
</resources>
