<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/on_mind"
        android:gravity="center"
        android:textColor="@color/white_textcolor"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
 <TextView
     android:id="@+id/add_daily_demand"
     android:layout_marginTop="10dp"
     android:textColor="@color/blue_textcolor"
     android:text="@string/add_daily_demand"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/manage_daily_demand"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue_textcolor"
        android:text="@string/manage_daily_demand"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>