<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.red.magazine.fragments.TellUsAboutYourMallFragment">

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tell_us_about_your_mall"
            android:textColor="@color/white_textcolor"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="200dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_height="1dp"
            android:background="@color/hint_color"/>

        <EditText
            android:id="@+id/mall_name_input"
            android:paddingLeft="15dp"
            android:textColor="@color/white_textcolor"
            android:hint="@string/mall_name"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tin_no_input"
            android:paddingLeft="15dp"
            android:textColor="@color/white_textcolor"
            android:hint="@string/tin_no"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/city_input"
            android:paddingLeft="15dp"
            android:textColor="@color/white_textcolor"
            android:hint="@string/city"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/no_of_floors_input"
            android:textColor="@color/white_textcolor"
            android:paddingLeft="15dp"
            android:hint="@string/no_of_floors"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/error_shower1"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/next1"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:textColor="@color/white_textcolor"
            android:background="@drawable/button_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>