<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.red.magazine.malls.fragments.Add_New_User_fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/white_textcolor"
            android:layout_height="match_parent"
            android:text="@string/profile_completion" />
       <LinearLayout
           android:orientation="vertical"
           android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/retailers_tin_no"
               android:paddingLeft="15dp"
               android:hint="@string/tin_no"
               android:textColor="@color/white_textcolor"
               android:textColorHint="@color/hint_color"
               android:background="@drawable/text_field"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
           <EditText
               android:id="@+id/retailers_password"
               android:textColor="@color/white_textcolor"
               android:paddingLeft="15dp"
               android:hint="@string/create_reatiler_password"
               android:textColorHint="@color/hint_color"
               android:background="@drawable/text_field"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
           <Button
               android:id="@+id/add_new_user"
               android:layout_marginTop="20dp"
               android:textAllCaps="true"
               android:background="@drawable/button_normal"
               android:textColor="@color/white_textcolor"
               android:text="@string/add_new_users"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
       </LinearLayout>
    </LinearLayout>
</FrameLayout>
