<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/create_your_passowrd"
                android:textColor="@color/white_textcolor"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="200dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_height="1dp"
                android:background="@color/hint_color"/>
        </LinearLayout>

        <EditText
            android:id="@+id/password_input"
            android:textColor="@color/white_textcolor"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColor="@color/white_textcolor"
            android:id="@+id/retype_password_input"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:hint="@string/re_password"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/error_shower3"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/sign_up_btn"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:textColor="@color/white_textcolor"
            android:background="@drawable/button_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>