<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.red.magazine.LoginActivity">
    <include layout="@layout/tool_bar" android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

     <!-- sign in container layout-->
        <LinearLayout
            android:id="@+id/sign_in_containerlayout"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--verification displayer-->
            <LinearLayout
                android:visibility="gone"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:id="@+id/verification_shower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/login_error_shower"
                    android:visibility="gone"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/verify_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="@color/white_textcolor"
                    />
                <TextView
                    android:id="@+id/verification_success_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:lineSpacingExtra="5sp"
                    android:textColor="@color/blue_textcolor"
                    />
            </LinearLayout>

            <!-- login editext layout-->
            <EditText
                android:id="@+id/sign_in_tin_no"
                android:textColor="@color/white_textcolor"
                android:textCursorDrawable="@null"
                android:paddingLeft="15dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sign_in_password"
                android:textColor="@color/white_textcolor"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:hint="@string/password"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/login_btn"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"
                android:textColor="@color/white_textcolor"
                android:background="@drawable/button_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/forgot_password"
                android:text="@string/forgot_password"
                android:layout_marginTop="20dp"
                android:textColor="@color/blue_textcolor"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white_textcolor"
                    android:text="@string/dont_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/sign_up"
                    android:text="@string/signup"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/blue_textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    <!-- end of sign in container layout-->

    <!-- sign up layout starts here-->
    <ViewFlipper
        android:layout_below="@+id/toolbar"
        android:visibility="gone"
        android:id="@+id/simpleViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ViewFlipper>
    <!--end of sign up container layout-->
    <LinearLayout
        android:id="@+id/already_have_account_layout"
        android:visibility="gone"
        android:layout_below="@+id/simpleViewFlipper"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white_textcolor"
            android:text="@string/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/all_have_account_login"
            android:text="@string/login"
            android:layout_marginLeft="5dp"
            android:textColor="@color/blue_textcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="50dp"
        android:id="@+id/create_pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
